# esp-noise-detect

./: .gitignore  .skyignore  Cargo.toml  LICENSE  README.md  sky.yaml
.cargo/: config.toml
crates/burn-audiomentations/: Cargo.toml  README.md
crates/burn-audiomentations/examples/: bench_colored_noise.rs  bench_colored_noise_stages.rs
crates/burn-audiomentations/src/: compose.rs  filters.rs  gain.rs  kernels.rs  lib.rs  noise.rs  pitch_shift.rs  polarity.rs  time_masking.rs  transform.rs
crates/burn-audiomentations/tests/: _backend_guard.rs  colored_noise.rs  compose.rs  filters.rs  gain.rs  large_dispatch.rs  pitch_shift.rs  pitch_shift_fixtures.rs  polarity.rs  time_masking.rs
crates/burn-audiomentations/tests/common/: mod.rs
crates/burn-audiomentations/tests/fixtures/: generate_pitch_shift.py
crates/burn-espdl-export/: Cargo.toml  README.md
crates/burn-espdl-export/schema/: Dl.fbs
crates/burn-espdl-export/src/: container.rs  dl_generated.rs  export.rs  exporter.rs  layout.rs  lib.rs  quant.rs  reader.rs  writer.rs
crates/burn-espdl-export/src/calib/: mod.rs  observer.rs  pow2.rs  runner.rs
crates/burn-espdl-export/src/ir/: bn_fold.rs  extract.rs  forward.rs  layer.rs  mod.rs  relu_fuse.rs
crates/burn-espdl-export/tests/: bn_folding.rs  burn_graph_extraction.rs  calibration_parity.rs  exporter_api.rs  flatbuffers_roundtrip.rs  forward_parity_fp32.rs  generate_mininet_oracle_dump.rs  golden_roundtrip.rs  header_writer.rs  observer_kl.rs  observer_minmax.rs  op_node_parity.rs  weight_layout.rs  weight_quant_parity.rs
crates/burn-espdl-export/tests/common/: fixture_lowering.rs  fixture_model.rs  mod.rs
crates/burn-espdl-export/tests/fixtures/: mininet.espdl  mininet_calib.json
crates/burn-espdl-export/tests/fixtures/generate/: mininet_oracle.py
crates/cubek-fft/: Cargo.toml  README.md
crates/cubek-fft/examples/: bench.rs  size_probe.rs
crates/cubek-fft/src/fft/: cfft.rs  fft_inner.rs  fft_parallel.rs  irfft.rs  mod.rs  rfft.rs  rfft_large.rs
crates/cubek-fft/tests/: lib.rs
crates/cubek-fft/tests/suite/: fft_round_trip.rs  mod.rs  size_sweep.rs
crates/cubek-phasevocoder/: Cargo.toml  README.md
crates/cubek-phasevocoder/examples/: bench.rs
crates/cubek-phasevocoder/src/: lib.rs  phase_vocoder.rs
crates/cubek-phasevocoder/tests/: fixtures.rs  identity.rs  large_dispatch.rs  parity.rs
crates/cubek-phasevocoder/tests/common/: mod.rs
crates/cubek-phasevocoder/tests/fixtures/: generate.py
crates/cubek-resample/: Cargo.toml  README.md
crates/cubek-resample/src/: fast_shifts.rs  kernels.rs  lib.rs  resample.rs
crates/cubek-resample/tests/: batched.rs  fixtures.rs  impulse.rs  large_dispatch.rs
crates/cubek-resample/tests/common/: mod.rs
crates/cubek-resample/tests/fixtures/: generate.py
crates/cubek-sinc-filter/: Cargo.toml  README.md
crates/cubek-sinc-filter/examples/: bench.rs
crates/cubek-sinc-filter/src/: fft_conv.rs  filter_bank.rs  filters.rs  lib.rs
crates/cubek-sinc-filter/tests/: cpu_parity.rs  fixtures.rs  frequency_response.rs  large_dispatch.rs
crates/cubek-sinc-filter/tests/common/: mod.rs
crates/cubek-sinc-filter/tests/fixtures/: generate.py
crates/cubek-stft/: Cargo.toml  README.md
crates/cubek-stft/examples/: bench.rs
crates/cubek-stft/src/: istft.rs  lib.rs  stft.rs  window.rs
crates/cubek-stft/tests/: _backend_guard.rs  large_dispatch.rs  parity.rs  roundtrip.rs
crates/cubek-stft/tests/common/: mod.rs
firmware/: .env.example  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
firmware/.cargo/: config.toml
firmware/examples/: ct_monitor.rs
firmware/models/: noise_model_2.espdl  noise_model_3.espdl  noise_model_4.espdl  noise_model_5.espdl  noise_model_6.espdl  noise_model_7.espdl
firmware/scripts/: ram_report.sh
firmware/src/: lib.rs  logging.rs  util.rs
firmware/src/app/: config.rs  mod.rs
firmware/src/domain/: mod.rs
firmware/src/drivers/: gpio.rs
firmware/src/features/: mel.rs  mod.rs
firmware/src/infra/: instrumentation.rs  led_xiao.rs  mod.rs  mqtt_client_pump.rs  net_stack.rs  pump_classifier.rs  pump_monitor.rs  recording_orchestrator.rs  tcp_client.rs  tcp_client_pump.rs
firmware/src/infra/i2s_capture/: REVIEW.md  drain.rs  metrics.rs  mod.rs  processors.rs
firmware/src/pump_app/: config.rs  mod.rs
host-tools/: Cargo.toml  Dockerfile  README.md
host-tools/src/: lib.rs  server.rs  session.rs  util.rs
host-tools/src/storage/: mod.rs  wav.rs
nn/: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  sky.yaml
nn-rs/: Cargo.toml  README.md
nn-rs/configs/: robust_session.yaml
nn-rs/python/: burn_to_onnx.py
nn-rs/src/: espdl.rs  espdl_calib.rs  lib.rs  mel.rs  model.rs
nn-rs/src/data/: batcher.rs  config.rs  dataset.rs  manifest.rs  mod.rs
nn-rs/src/eval/: audit.rs  metrics.rs  mod.rs  runner.rs
nn-rs/src/train/: augment.rs  config.rs  metrics.rs  mod.rs  runner.rs
nn-rs/tests/: data_pipeline.rs  eval_smoke.rs  mel_parity.rs  tinyconv_parity.rs  training_smoke.rs
nn-rs/tests/common/: mod.rs
nn-rs/tests/fixtures/: generate.py  generate_tinyconv.py
nn/configs/: eval.yaml  export.yaml  infer.yaml  train.yaml
nn/configs/augment/: light.yaml  none.yaml  robust.yaml  robust_lite.yaml  strong.yaml
nn/configs/dataset/: manifest.yaml
nn/configs/experiment/: README.md  light_baseline.yaml  robust_session.yaml
nn/configs/features/: mel.yaml
nn/configs/model/: tinyconv.yaml
nn/docker/: esp-ppq-cpu.Dockerfile
nn/scripts/: analyze_recordings.py  build_manifest.py  check_split_integrity.py  export_espdl.py
nn/scripts/diag/: fp32_vs_onnx.py  honest_eval.py  inventory.py  label_noise_check.py  split_overlap.py
nn/src/noise_detect/: __init__.py  config.py  eval.py  export.py  infer.py  train.py
nn/src/noise_detect/augment/: __init__.py  pipeline.py
nn/src/noise_detect/data/: cached_dataset.py  datamodule.py  dataset.py  manifest.py  mel_cache.py
nn/src/noise_detect/features/: mel.py  utils.py
nn/src/noise_detect/models/: common.py  tinyconv.py
wire-protocol/: Cargo.toml
wire-protocol/src/: lib.rs
xtask/: Cargo.toml
(+11 files in other folders)
