[workspace]
resolver = "2"
members = [
    "crates/burn-espdl-export",
    "nn-rs",
    "xtask",
]
exclude = [
    "firmware",
    "host-tools",
    "wire-protocol",
    "nn",
    "_reference",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

# ----------------------------------------------------------------------------
# Burn + CubeCL + CubeK alignment.
#
# We pin the dependency graph so Cargo resolves a single instance of CubeCL
# across the whole build:
#
#   burn    -> 7640aa7d0704a6a548587d67e77ef489a9a587b7
#   cubecl  -> 0.10.0-pre.4
#   cubek   -> 4e10c44c0d18d9250f70439c453c3c28db1ec0d5
# ----------------------------------------------------------------------------

[workspace.dependencies]
# Burn
burn        = { git = "https://github.com/tracel-ai/burn", rev = "7640aa7d0704a6a548587d67e77ef489a9a587b7", default-features = false }
burn-wgpu   = { git = "https://github.com/tracel-ai/burn", rev = "7640aa7d0704a6a548587d67e77ef489a9a587b7", default-features = false }
burn-cuda   = { git = "https://github.com/tracel-ai/burn", rev = "7640aa7d0704a6a548587d67e77ef489a9a587b7", default-features = false }
burn-cubecl = { git = "https://github.com/tracel-ai/burn", rev = "7640aa7d0704a6a548587d67e77ef489a9a587b7", default-features = false }
burn-tensor = { git = "https://github.com/tracel-ai/burn", rev = "7640aa7d0704a6a548587d67e77ef489a9a587b7", default-features = false }
burn-store  = { git = "https://github.com/tracel-ai/burn", rev = "7640aa7d0704a6a548587d67e77ef489a9a587b7", default-features = false }

# CubeCL
cubecl        = { version = "=0.10.0-pre.4", default-features = false }
cubecl-common = { version = "=0.10.0-pre.4", default-features = false }
cubecl-cuda   = { version = "=0.10.0-pre.4", default-features = false }
cubecl-std    = { version = "=0.10.0-pre.4", default-features = false }

# CubeK (upstream crates).
cubek-random     = { git = "https://github.com/tracel-ai/cubek", rev = "4e10c44c0d18d9250f70439c453c3c28db1ec0d5" }
cubek-test-utils = { git = "https://github.com/tracel-ai/cubek", rev = "4e10c44c0d18d9250f70439c453c3c28db1ec0d5" }
cubek-fft        = { git = "https://github.com/tracel-ai/cubek", rev = "4e10c44c0d18d9250f70439c453c3c28db1ec0d5" }

# Audio kernel crates.
cubek-stft = { git = "https://github.com/g1ibby/cubek-audio", rev = "56fe346c747112815657da5beabbfc7b42eda818", default-features = false }
cubek-phasevocoder = { git = "https://github.com/g1ibby/cubek-audio", rev = "56fe346c747112815657da5beabbfc7b42eda818", default-features = false }
cubek-resample = { git = "https://github.com/g1ibby/cubek-audio", rev = "56fe346c747112815657da5beabbfc7b42eda818", default-features = false }
cubek-sinc-filter = { git = "https://github.com/g1ibby/cubek-audio", rev = "56fe346c747112815657da5beabbfc7b42eda818", default-features = false }
burn-audiomentations = { git = "ssh://git@github.com/g1ibby/burn-audiomentations.git", rev = "e28eacb0bbeca2d6dcc89695e4657cf6e79fcc93", default-features = false }
burn-espdl-export = { path = "crates/burn-espdl-export", default-features = false }
nn-rs = { path = "nn-rs", default-features = false }

# Host-side dependencies
bytemuck = "1.25"
half = { version = "2.5", default-features = false }
rustfft = "6.2"

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.build-override]
opt-level = 3
