[package]
name = "firmware"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["g1ibby"]

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.18.0", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.16.0", features = ["log-04", "esp32s3"] }
esp-alloc = { version = "0.9.0" }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy", "esp-radio", "esp-alloc"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-radio = { version = "0.17.0", features = [
    "log-04",
    "unstable",
    "wifi",
    "esp32s3",
] }
embassy-executor = { version = "0.10.0" }
embassy-net = { version = "0.9.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-time = "0.5.0"
embassy-sync = "0.8.0"
embedded-io = { version = "0.7", default-features = false}
embedded-io-async = "0.7"
reqwless = "0.13.0"
static_cell = "2.1.1"
cfg-if = "1.0"
heapless = "0.8"
libm = "0.2"
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc" }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
wire-protocol = { path = "../wire-protocol" }
edgedl = { git = "https://github.com/g1ibby/edgedl", branch = "main", default-features = false, features = ["simd-s3"] }
edgedl-macros = { git = "https://github.com/g1ibby/edgedl", branch = "main" }
embassy-futures = "0.1.0"
log = "0.4"
microfft = { version = "0.6", default-features = false, features = ["size-1024"] }
defmt               = "1.0.1"
defmt-rtt           = { version = "1.0.0", optional = true }
rust-mqtt           = { version = "0.5.1", default-features = false, features = ["v5", "bump", "log"], optional = true }

[features]
default = []
# Audio streaming to server (continuous or pump-gated via ADC)
streaming = []
# NN-based pump inference (dual-core, outputs pump state)
inference = []
# MQTT output for inference feature (instead of TCP)
mqtt = ["dep:rust-mqtt"]
# Debug features
mf-describe = []

[[bin]]
name = "dataset_collector"
required-features = ["streaming"]

[[bin]]
name = "pump_monitor"
required-features = ["inference"]

# ct_monitor is a standalone diagnostic tool, kept as an example

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
opt-level        = 3
lto              = false          # LTO breaks TIE728 SIMD assembly
overflow-checks  = false
panic            = "abort"


[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
