[package]
name = "host-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["g1ibby"]

[dependencies]
serialport = "4.5"
hound = "3.5"
tokio = { version = "1", features = ["full", "net", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
bytes = "1.5"
wire-protocol = { path = "../wire-protocol", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


[lib]
name = "host_tools"
path = "src/lib.rs"

[[bin]]
name = "wifi_audio_server"
path = "src/bin/wifi_audio_server.rs"

[[bin]]
name = "pump_monitor"
path = "src/bin/pump_monitor.rs"
