[package]
name = "cubek-stft"
description = "Short-time Fourier transform kernels built on cubek-fft"
edition.workspace = true
license.workspace = true
version.workspace = true

# Modelled after cubek-fft: runtime-generic over `cubecl::Runtime`, tested
# against wgpu. See MIGRATION_PLAN.md §2.1 step 1 and SPIKE_FINDINGS.md.

[features]
default = ["std"]
std = ["cubecl/std", "cubek-fft/std"]

# Test-only backend selectors. Pick exactly one at `cargo test` time:
#   cargo test --features test-metal   (Apple Silicon)
#   cargo test --features test-cuda    (Linux NVIDIA, needs CUDA Toolkit)
#   cargo test --features test-vulkan  (Linux AMD / fallback)
#   cargo test --features test-cpu     (sanity runs, no GPU required)
test-metal  = ["cubecl/wgpu-msl"]
test-vulkan = ["cubecl/wgpu-spirv"]
test-cuda   = ["cubecl/cuda"]
test-cpu    = ["cubecl/cpu"]

[dependencies]
cubecl = { workspace = true }
cubek-fft = { workspace = true }

[dev-dependencies]
# `test-runtime` activates cubecl::TestRuntime scaffolding; the actual
# backend is chosen by --features test-{metal,vulkan,cuda,cpu} above.
cubecl = { workspace = true, features = ["std", "stdlib", "test-runtime"] }
rustfft = { workspace = true }
bytemuck = { workspace = true }
